--- a/README.textile
+++ b/README.textile
@@ -4,7 +4,7 @@ h2. Welcome to the home of Mobipayments, the simple mobile payment Java lib!
 
 h1. Forks
 
-Looking for a scribe variation? check the "Fork List":https://github.com/Simbacode/mobipayments/wiki/Forks
+Looking for a mobipayments variation? check the "Fork List":https://github.com/Simbacode/mobipayments/wiki/Forks
 
 If you have a useful fork that should be listed there please contact (see About).
 
