--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,10 @@
 h2. Welcome to the home of Mobipayments, the simple mobile payment Java lib!
 
+Currently we are integrating pesapal;
+
+ * Pespal API is on OAUTH 1.0
+ * Please Replace contents in {} with your details
+
 !https://secure.travis-ci.org/Simbacode/mobipayments.png?branch=master(travis-ci-status)!
 
 h1. Forks
