--- a/README.textile
+++ b/README.textile
@@ -7,17 +7,19 @@ Currently we are integrating pesapal;
 
 !https://secure.travis-ci.org/Simbacode/mobipayments.png?branch=master(travis-ci-status)!
 
-h1. How to use
+h3. How to
+
 This is a Maven poject and hence it is easy to use the library. 
 To directly use it as part of your project source code;
 1. git clone.
 2.You can also use maven. 
+<code>
 <dependency>
 <groupId>com.simbacode.payments</groupId>
     <artifactId>mobipayments</artifactId>
     <version>0.0.1</version>
 </dependency>
-
+</code>
 Make sure that you provide a properties file. see pesapal.properties for example
 but remember to change the following properties to your needs;
 
@@ -33,17 +35,18 @@ pesapal.serviceProvider.accessTokenURL: http://demo.pesapal.com/API/PostPesapalD
 
 There is a sample CMD app called pesapalCMD that uses this library in the src. enjoy!
 
-h1. Way forward
- Create a variety of examples.
+h3. Way forward
 
-h1. Forks
+Create a variety of examples.
+
+h3. Forks
 
 Looking for a mobipayments variation? check the "Fork List":https://github.com/Simbacode/mobipayments/wiki/Forks
 
 If you have a useful fork that should be listed there please contact (see About).
 
-h1. About
+h3. About
 
-Follow: "@ugsimbacode":http://twitter.com/ugsimbacode
+Follow: "@ugsimbacode":http://twitter.com/ugsimbacode :"@mistaguy":http://twitter.com/mistaguy
 
 email: "Contact":contact@simbacode.com
