--- a/README.textile
+++ b/README.textile
@@ -13,14 +13,14 @@ This is a Maven poject and hence it is easy to use the library.
 To directly use it as part of your project source code;
 1. git clone. This is straight forward.
 2. use manven. use the following dependency
-bc.. put this in your maven POM
 
+<pre lang="xml">
   <dependency>
       <groupId>com.simbacode</groupId>
       <artifactId>mobipayments</artifactId>
       <version>0.0.1</version>
     </dependency>
-
+</pre>
 
 Make sure that you provide a properties file. see pesapal.properties for example
 but remember to change the following properties to your needs;
