--- a/README.textile
+++ b/README.textile
@@ -5,8 +5,8 @@ Currently we support pesapal;
  * Pespal API is on OAUTH 1.0
  * Please Replace contents in {} with your details
 
-!https://secure.travis-ci.org/Simbacode/mobipayments.png?branch=master(travis-ci-status)!
-!https://coveralls.io/repos/mistaguy/mobipayments/badge.png?branch=master(Coverage Status)!:https://coveralls.io/r/mistaguy/mobipayments?branch=master
+[!https://secure.travis-ci.org/Simbacode/mobipayments.png?branch=master(travis-ci-status)!
+[!https://coveralls.io/repos/mistaguy/mobipayments/badge.png?branch=master(Coverage Status)!:https://coveralls.io/r/mistaguy/mobipayments?branch=master
 
 h3. How to
 
